# swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
       "version": "1.0.0",
-      "title": "Shopping App - CRUD",
+      "title": "Grocery app",
       "description": "My Shopping App Project Application API",
       "license": {
         "name": "MIT",
@@ -13,25 +13,41 @@
     "basePath": "/",
     "tags": [
       {
-        "name": "Products",
-        "description": "Products API"
+        "name": "Category",
+        "description": "Category API"
       }
     ],
     "schemes": ["http"],
     "consumes": ["application/json"],
     "produces": ["application/json"],
     "paths": {
-      "/api/products": {
+      "/api/category": {
         "get": {
-          "tags": ["Products"],
-          "summary": "Get all products",
+          "tags": ["Category"],
+          "summary": "Get all Category",
           "parameters": [
             {
-              "name": "productName",
+              "name": "categoryName",
               "in": "query",
               "required": false,
-              "description": "Product Name",
+              "description": "Category Name",
               "type": "string"
+            },
+            {
+              "name": "page",
+              "in": "query",
+              "required": false,
+              "description": "Page Number",
+              "type": "integer",
+              "default":1
+            },
+            {
+              "name": "pageSize",
+              "in": "query",
+              "required": false,
+              "description": "Page Size",
+              "type": "integer",
+              "default":10
             }
           ],
           "responses": {
@@ -44,33 +60,33 @@
           }
         },
         "post": {
-          "tags": ["Products"],
-          "summary": "Create Product API",
+          "tags": ["Category"],
+          "summary": "Create Category API",
           "parameters": [
             {
-              "name": "productName",
+              "name": "categoryName",
               "in": "formData",
-              "description": "Product Name",
+              "description": "Category Name",
               "required": true,
               "type": "string"
             },
             {
-              "name": "productDescription",
+              "name": "categoryDescription",
               "in": "formData",
-              "description": "Product Description",
+              "description": "Category Description",
               "type": "string"
             },
             {
-              "name": "productPrice",
+              "name": "categoryPrice",
               "in": "formData",
-              "description": "Product Price",
+              "description": "Category Price",
               "required": true,
               "type": "integer"
             },
             {
-              "name": "productImage",
+              "name": "categoryImage",
               "in": "formData",
-              "description": "Product Image",
+              "description": "Category Image",
               "type": "file"
             }
           ],
@@ -84,19 +100,19 @@
           }
         }
       },
-      "/api/products/{id}": {
+      "/api/category/{id}": {
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "description": "Product Id",
+            "description": "Category Id",
             "type": "string"
           }
         ],
         "get": {
-          "tags": ["Products"],
-          "summary": "Product Details based on Product Id",
+          "tags": ["Category"],
+          "summary": "Category Details based on Category Id",
           "responses": {
             "200": {
               "description": "OK",
@@ -107,33 +123,33 @@
           }
         },
         "put": {
-          "tags": ["Products"],
-          "summary": "Update Product API",
+          "tags": ["Category"],
+          "summary": "Update Category API",
           "parameters": [
             {
-              "name": "productName",
+              "name": "categoryName",
               "in": "formData",
-              "description": "Product Name",
+              "description": "Category Name",
               "required": true,
               "type": "string"
             },
             {
-              "name": "productDescription",
+              "name": "categoryDescription",
               "in": "formData",
-              "description": "Product Description",
+              "description": "Category Description",
               "type": "string"
             },
             {
-              "name": "productPrice",
+              "name": "categoryPrice",
               "in": "formData",
-              "description": "Product Price",
+              "description": "Category Price",
               "required": true,
               "type": "integer"
             },
             {
-              "name": "productImage",
+              "name": "categoryImage",
               "in": "formData",
-              "description": "Product Image",
+              "description": "Category Image",
               "type": "file"
             }
           ],
@@ -147,8 +163,8 @@
           }
         },
         "delete": {
-          "tags": ["Products"],
-          "summary": "Delete Product API",
+          "tags": ["Category"],
+          "summary": "Delete Category API",
           "responses": {
             "200": {
               "description": "OK",
@@ -162,22 +178,22 @@
     },
     "definitions": {
       "Product": {
-        "required": ["productName", "_id", "productPrice"],
+        "required": ["categoryName", "_id", "categoryPrice"],
         "properties": {
           "_id": {
             "type": "integer",
             "uniqueItems": true
           },
-          "productName": {
+          "categoryName": {
             "type": "string"
           },
-          "productDescription": {
+          "categoryDescription": {
             "type": "string"
           },
-          "productPrice": {
+          "categoryPrice": {
             "type": "number"
           },
-          "productImage": {
+          "categoryImage": {
             "type": "string"
           }
         }
